fixes after java update